# playwright_for_android

./: .mcp.json.example  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
scripts/: observe.py  onboard.py  paths.py  server.py  session.py
skills/android-app-debug-mcp/: SKILL.md
skills/playwright-for-android/: SKILL.md
