[project]
name = "playwright-for-android"
version = "0.2.1"
description = "MCP server for end-to-end Android debug sessions on an emulator."
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.12.*"
authors = [
    { name = "Team Marvis (SungKyunKwan University)", email = "fclab.skku@gmail.com" },
]
keywords = [
    "android",
    "android-debug",
    "emulator",
    "adb",
    "logcat",
    "mcp",
    "claude-code",
]
dependencies = [
    "mcp>=1.0.0",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/fclab-skku/playwright_for_android"
Repository = "https://github.com/fclab-skku/playwright_for_android.git"

[tool.uv]
package = false
